main overflow fix

--- a/services/admin/public/style/dashboard.css
+++ b/services/admin/public/style/dashboard.css
@@ -408,7 +408,7 @@ main{
         cursor: pointer;
     }
     .page{
-        margin: 5vh auto 2vh auto;
+        margin: 5vh auto 0 auto;
     }
     .page__header{
         display: flex;
